# notebooklm-slide-refiner

./: .gitignore  README.md  pyproject.toml
examples/: README.md  generate_sample_pdf.py
notebooklm_slide_refiner/: __init__.py  __main__.py  assemble.py  flows.py  manifest.py  refine.py  render.py  tasks.py  utils.py  vertex_refine.py
notebooklm_slide_refiner/prompts/: default.txt
tests/: test_letterbox.py  test_manifest.py  test_pages_parse.py  test_resolution.py
